--- a/assets/style.css
+++ b/assets/style.css
@@ -4,53 +4,52 @@
   box-sizing: border-box;
 }
 
-.main-container {
+.opt-main-container {
   width: 1236px;
-  height: 984px;
   margin: auto;
   background-color: #EDF1F5;
 }
-.main-container .top-bar {
+.opt-main-container .opt-top-bar {
   height: 92px;
-  margin-top: 0;
   margin-left: 2px;
   margin-right: 2px;
   background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-  align-items: center;
-  padding: 14px;
+  display: flex;
+  justify-content: space-between;
+  padding: 14px 36px;
 }
-.main-container .top-bar .logo {
+.opt-main-container .opt-top-bar .opt-top-left-side {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.opt-main-container .opt-top-bar .opt-top-left-side .logo {
   height: 64px;
   width: 64px;
-  margin-top: 14px;
-  margin-bottom: 14px;
-  margin-left: 36px;
+  cursor: pointer;
 }
-.main-container .top-bar .icon_wrapper {
+.opt-main-container .opt-top-bar .opt-top-left-side .icon_wrapper {
   height: 18px;
   width: 18px;
   margin-left: 27px;
 }
-.main-container .top-bar .top-bar-content {
+.opt-main-container .opt-top-bar .opt-top-left-side .top-bar-content {
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 19px;
-  margin-left: 15px;
   color: #38424F;
+  margin-left: 15px;
 }
-.main-container .top-bar .top-bar-btn {
+.opt-main-container .opt-top-bar .opt-top-right-side .top-bar-btn {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  width: 193px;
-  height: 48px;
   background-color: #680DB4;
+  padding: 12px 16px;
   border-radius: 4px;
   border: none;
   font-family: "Inter";
@@ -58,25 +57,21 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 19px;
+  cursor: pointer;
   color: #F6ECFF;
-  margin-top: 14.5px;
-  margin-bottom: 14.5px;
-  margin-left: 650px;
-  margin-right: 36px;
 }
-.main-container .top-bar .top-bar-btn .top-btn-icon {
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 16px;
+.opt-main-container .opt-top-bar .opt-top-right-side .top-bar-btn .opt-top-bar-text {
+  margin-left: 20px;
 }
-
-.opt-body {
+.opt-main-container .opt-body {
   margin-top: 8px;
   display: flex;
 }
-.opt-body .left-sidebar {
+.opt-main-container .opt-body .opt-body-left-child {
+  display: flex;
+}
+.opt-main-container .opt-body .opt-body-left-child .left-sidebar {
   width: 260px;
-  height: 884px;
   margin-left: 0px;
   padding-top: 24px;
   padding-left: 32px;
@@ -84,7 +79,7 @@
   background: #F7F8F9;
   border-radius: 0px 4px 0px 0px;
 }
-.opt-body .left-sidebar .left-sidebar-heading {
+.opt-main-container .opt-body .opt-body-left-child .left-sidebar .left-sidebar-heading {
   width: 92px;
   height: 17px;
   font-family: "Inter";
@@ -94,7 +89,7 @@
   line-height: 17px;
   color: #2F0154;
 }
-.opt-body .left-sidebar .sidebar-ul .sidebar-li {
+.opt-main-container .opt-body .opt-body-left-child .left-sidebar .sidebar-ul .sidebar-li {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -102,8 +97,14 @@
   gap: 20px;
   border-radius: 4px;
   margin-top: 24px;
+  cursor: pointer;
 }
-.opt-body .left-sidebar .sidebar-ul .sidebar-li .opt-sidebar-text {
+.opt-main-container .opt-body .opt-body-left-child .left-sidebar .sidebar-ul .sidebar-li .active {
+  background: #FFFFFF;
+  font-weight: 600;
+  color: #680DB4;
+}
+.opt-main-container .opt-body .opt-body-left-child .left-sidebar .sidebar-ul .sidebar-li .opt-sidebar-text {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -111,26 +112,17 @@
   line-height: 19.36px;
   color: #8794A7;
 }
-.opt-body .left-sidebar .sidebar-ul .sidebar-li .active {
-  background: #FFFFFF;
-  font-weight: 600;
-  color: #680DB4;
-}
-.opt-body .opt-main-content {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content {
   width: 692px;
-  height: 884px;
   margin-left: 8px;
-  padding-top: 20;
-  padding-left: 36px;
-  padding-right: 32px;
   background: #FFFFFF;
   border-radius: 4px 4px 0px 0px;
 }
-.opt-body .opt-main-content .opt-main-content-ul {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-content-ul {
   list-style-type: none;
   overflow: hidden;
 }
-.opt-body .opt-main-content .opt-main-content-ul .opt-main-content-li {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-content-ul .opt-main-content-li {
   display: block;
   float: left;
   margin-left: 20px;
@@ -143,21 +135,27 @@
   color: #771CC4;
   padding: 16px;
   text-decoration: none;
+  cursor: pointer;
 }
-.opt-body .opt-main-content .opt-main-content-ul .opt-main-content-li-active {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-content-ul .opt-main-content-li-active {
   border-bottom: 1px solid #771CC4;
 }
-.opt-body .opt-main-content .opt-main-contents {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items {
+  display: none;
+}
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items.opt-field-active {
   display: flex;
-  margin-top: 48px;
+  flex-direction: column;
+}
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items .opt-main-item {
+  display: flex;
+  padding: 24px 32px;
   border-bottom: 1px solid #EDF1F5;
-  padding-bottom: 24px;
 }
-.opt-body .opt-main-content .opt-main-contents .opt-contents {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items .opt-main-item .opt-contents {
   width: 273px;
-  height: 15px;
 }
-.opt-body .opt-main-content .opt-main-contents .opt-contents .opt-content-heading {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items .opt-main-item .opt-contents .opt-item-heading {
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
@@ -165,15 +163,15 @@
   line-height: 17px;
   color: #38424F;
 }
-.opt-body .opt-main-content .opt-main-contents .opt-contents .opt-content-para {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items .opt-main-item .opt-contents .opt-item-para {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 150%;
   margin-top: 8px;
 }
-.opt-body .opt-main-content .opt-main-contents .opt-main-input {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items .opt-main-item .opt-main-input {
   width: 320px;
   height: 40px;
   border: 1px solid #CFD8E1;
@@ -181,15 +179,14 @@
   background: #F7F8F9;
   margin-left: 30px;
 }
-.opt-body .opt-main-content .opt-main-content-bottom {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items-button .opt-main-item-button {
   display: flex;
-  margin-top: 547px;
   border-top: 1px solid #CFD8E1;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 32px;
 }
-.opt-body .opt-main-content .opt-main-content-bottom .opt-main-content-bottom-btn {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items-button .opt-main-item-button .opt-main-content-bottom-btn {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -203,8 +200,9 @@
   color: #680DB4;
   border: 1px solid #680DB4;
   border-radius: 4px;
+  cursor: pointer;
 }
-.opt-body .opt-main-content .opt-main-content-bottom .opt-main-content-bottom-anchor {
+.opt-main-container .opt-body .opt-body-left-child .opt-main-content .opt-main-items-button .opt-main-item-button .opt-main-content-bottom-anchor {
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
@@ -214,4 +212,65 @@
   margin-left: 20px;
   color: #EF4444;
   text-decoration: none;
+}
+.opt-main-container .opt-body .opt-body-right-child {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents {
+  width: 264px;
+  padding: 20px 20px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 8px;
+  margin-right: 8px;
+  gap: 16px;
+  margin-bottom: 8px;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents .opt-right-side-bar .opt-right-side-bar-title {
+  display: flex;
+  align-items: center;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents .opt-right-side-bar .opt-right-side-bar-title .opt-right-side-bar-title-heading {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #636E7E;
+  margin-left: 18px;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents .opt-right-side-bar .opt-right-side-bar-para {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  margin-top: 10px;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents .opt-right-side-bar .opt-right-side-bar-input {
+  padding: 8px 16px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #CFD8E1;
+  border-radius: 4px;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents .opt-right-side-bar .opt-right-side-bar-btn {
+  display: inline-block;
+  padding: 12px 16px;
+  gap: 20px;
+  background: #F6ECFF;
+  border-radius: 4px;
+  margin-top: 15px;
+  text-decoration: none;
+}
+.opt-main-container .opt-body .opt-body-right-child .opt-body-right-contents .opt-right-side-bar .opt-right-side-bar-btn .opt-right-side-bar-span {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #680DB4;
 }/*# sourceMappingURL=style.css.map */
